<resources>
    <string name="app_name">DictionaryApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_title">time - время</string>
    <string name="word_title">time</string>
    <string name="word_translation">время</string>
    <string name="word_transcription">[taɪm]</string>
    <string name="word_part_of_speech">(noun)</string>
    <string name="word_usage">You can visit me at any time.</string>
    <string name="count_of_learning_words">Count of learning words: 0</string>
    <string name="quiz_word1">time\n(noun)</string>
    <string name="quiz_word2">word\n(noun)</string>
    <string name="quiz_word3">house\n(noun)</string>
    <string name="quiz_word4">head\n(noun)</string>
    <string name="quiz_word5">road\n(noun)</string>
    <string name="quiz_button_tv">Check Quiz</string>
</resources>