<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.WordFragment">

    <LinearLayout
        android:id="@id/word_title_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:gravity="center_vertical"
            android:id="@+id/word_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_title_start_margin"
            android:layout_marginTop="@dimen/card_title_start_margin"
            android:text="@string/word_title"
            android:textSize="@dimen/word_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:gravity="center_vertical"
            android:id="@+id/part_of_speech_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_title_start_margin"
            android:layout_marginStart="@dimen/word_part_of_speech_start_margin"
            android:text="@string/word_part_of_speech"
            android:textSize="@dimen/part_of_speech_text_size"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/transcription_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_title_start_margin"
        android:layout_marginTop="@dimen/card_title_start_margin"
        android:textStyle="italic"
        android:text="@string/word_transcription"
        android:textSize="@dimen/word_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_title_layout" />

    <TextView
        android:id="@+id/translation_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_title_start_margin"
        android:layout_marginTop="@dimen/card_title_start_margin"
        android:textStyle="italic"
        android:text="@string/word_translation"
        android:textSize="@dimen/word_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transcription_tv" />

    <TextView
        android:id="@+id/example_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:layout_marginStart="@dimen/card_title_start_margin"
        android:layout_marginTop="@dimen/card_title_start_margin"
        android:text="@string/word_usage"
        android:textSize="@dimen/word_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translation_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>